--- a/index.html
+++ b/index.html
@@ -1,138 +1,303 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chocolate</title>
-  <link rel="stylesheet" href="./css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,700;1,14..32,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@300;400;600;900&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="#">SIMPLY CHOCOLATE
-      <img src="./images/logo.png" alt="chocolate-logo">
-    </a>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="">How it’s made?</a></li>
-        <li><a href="#reviews">Chocolate is loved</a></li>
-      </ul>
-      <ul>
-        <li>
-          <a href="">Instagram</a>
-        </li>
-        <li>
-          <a href="">Facebook</a>
-        </li>
-        <li>
-          <a href="">Twitter</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <!-- hero section -->
-    <section>
-      <h1>Treat yourself or a loved one to 
-our finest ingredients for a moment 
-of pure delight!</h1>
-      <button type="button">Buy now</button>
-      <a href="">How it’s made</a>
-      <a href="#benefits">scroll down</a>
-    </section>
-    <!-- our benefits section -->
-    <section id="benefits">
-      <h2>Our Benefits</h2>
-      <ul>
-        <li>
-          <h3>Unsurpassed taste</h3>
-          <p>Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.</p>
-        </li>
-        <li>
-          <h3>Affordable price</h3>
-          <p>Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.</p>
-        </li>
-        <li>
-          <h3>Own production</h3>
-          <p>We take pride in our own production process, ensuring that every step is carefully crafted to perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in every bite.</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Ingredients section -->
-    <section>
-      <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
-      <p>At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing of the finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one exceptional taste sensation.</p>
-      <ul>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>MILK CHOCOLATE</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>MILK</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>NUTS</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>SEMI - SWEET CHOCOLATE</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>CACAO</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>RASPBERRY</h3>
-        </li>
-        <li>
-          <img src="" alt="" width="206" height="160">
-          <h3>COCONUT OIL</h3>
-        </li>
-      </ul>
-    </section>
-    <!-- How it's made -->
-    <section>
-      <h2>hOW IT’S made?</h2>
-      <img src="./images/how-made.jpg" alt="" width="600" height="400">
-      <h3>Try  our chocolates today and discover the perfect balance of flavor</h3>
-      <ul>
-        <li>Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
-        <li>At the same time, prepare a water bath. Melt the butter on it.</li>
-        <li>"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</li>
-        <li>Heat the mixture over low heat, letting it barely boil.</li>
-        <li>Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</li>
-      </ul>
-    </section>
-
-    <!-- Reviews section -->
-    <section id="reviews">
-      <h3>chocolate is loved</h3>
-      <ul>
-        <li>
-          <img src="" alt="Victoria Dobrzhanska avatar" width="80" height="80">
-          <h3>Victoria Dobrzhanska</h3>
-          <p>I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
-        </li>
-        <li>
-          <img src="" alt="Nazar Babenko avatar" width="80" height="80">
-          <h3>Nazar Babenko</h3>
-          <p>This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
-        </li>
-        <li>
-          <img src="" alt="Olena Kampusch avatar" width="80" height="80">
-          <h3>Olena Kampusch</h3>
-          <p> Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
-        </li>
-      </ul>
-      <button type="button">Leave  a review</button>
-    </section>
-  </main>
-  <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chocolate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!-- Page Header -->
+    <header class="page-header">
+      <div class="container">
+        <nav class="page-nav">
+          <a class="page-logo" href="index.html">
+            <span class="text-italic">SIMPLY</span> CHOCOLATE
+          </a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="index.html">Home</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#how-made">How it’s made?</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#reviews">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <!-- Hero Section -->
+      <section class="hero-section">
+        <div class="container hero-container">
+          <h1 class="main-title">
+            Treat yourself or a loved one to our finest ingredients for a moment
+            of pure delight!
+          </h1>
+          <div class="hero-content-wrapper">
+            <button class="buy-now-btn" type="button">Buy now</button>
+            <a class="how-made-link" href="#how-made">How it’s made</a>
+            <a class="scroll-down-link" href="#benefits">scroll down</a>
+          </div>
+        </div>
+      </section>
+      <!-- Our Benefits -->
+      <section class="benefits-section section-paddings" id="benefits">
+        <div class="container benefits-container">
+          <h2 class="visually-hidden">Our benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-list-item">
+              <h3 class="benefits-list-title">Unsurpassed taste</h3>
+              <p class="benefits-list-text">
+                Crafted with the finest quality cocoa beans and a dedication to
+                perfection, each bite is a decadent experience that simply
+                cannot be matched. Savor the richness and complexity of our
+                Unsurpassed Taste and discover a new level of chocolate bliss.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-list-title">Affordable price</h3>
+              <p class="benefits-list-text">
+                Indulge in high-quality chocolate without breaking the bank with
+                Simply Chocolate's selection of affordable treats. Enjoy
+                mouth-watering truffles and velvety chocolate bars without
+                sacrificing taste or quality. Browse our selection and indulge
+                in affordable luxury today.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-list-title">Own production</h3>
+              <p class="benefits-list-text">
+                We take pride in our own production process, ensuring that every
+                step is carefully crafted to perfection. From selecting the
+                finest ingredients to handcrafting each piece, our attention to
+                detail is evident in every bite.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Ingredients Section -->
+      <section class="ingredients-section section-paddings">
+        <div class="container">
+          <h2 class="section-title ingredients-section-title">
+            It all adds up to one exceptional
+            <span class="accent-color">taste</span> sensation
+          </h2>
+          <p class="ingredients-description">
+            At Simply Chocolate, we believe that the secret to exceptional
+            chocolate is in the details. From the sourcing of the finest
+            ingredients to the careful crafting of each individual piece, every
+            step of our process adds up to one exceptional taste sensation.
+          </p>
+          <ul class="ingredients-list">
+            <li class="ingredients-list-item">
+              <img
+                class="ingredients-list-img"
+                src="./images/ingredients/milk-chocolate.png"
+                alt="milk chocolate"
+                width="202"
+                height="156"
+              />
+              <h3 class="ingredients-list-title">milk chocolate</h3>
+            </li>
+            <li class="ingredients-list-item">
+              <img
+                class="ingredients-list-img"
+                src="./images/ingredients/milk.png"
+                alt="milk"
+                width="202"
+                height="156"
+              />
+              <h3 class="ingredients-list-title">milk</h3>
+            </li>
+            <li class="ingredients-list-item">
+              <img
+                class="ingredients-list-img"
+                src="./images/ingredients/nuts.png"
+                alt="nuts"
+                width="202"
+                height="156"
+              />
+              <h3 class="ingredients-list-title">nuts</h3>
+            </li>
+            <li class="ingredients-list-item">
+              <img
+                class="ingredients-list-img"
+                src="./images/ingredients/semi-sweet-chocolate.png"
+                alt="semi-sweet chocolate"
+                width="202"
+                height="156"
+              />
+              <h3 class="ingredients-list-title">semi - sweet chocolate</h3>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- How It`s Made -->
+      <section class="how-made-section section-paddings" id="how-made">
+        <div class="container">
+          <h2 class="section-title">
+            How it’s <span class="accent-color">made</span>?
+          </h2>
+          <div class="how-made-content-wrapper">
+            <img
+              class="how-made-img"
+              src="./images/how-made/how-made.jpg"
+              alt="chocolate making process"
+              width="600"
+              height="400"
+            />
+            <div class="how-made-text-wrapper">
+              <h3 class="how-made-title">
+                Try our chocolates today and discover the perfect balance of
+                flavor
+              </h3>
+              <ul class="how-made-list">
+                <li class="how-made-list-item">
+                  Heat the milk in a saucepan without bringing it to a boil. Add
+                  sugar and cocoa powder.
+                </li>
+                <li class="how-made-list-item">
+                  At the same time, prepare a water bath. Melt the butter on it.
+                </li>
+                <li class="how-made-list-item">
+                  "Mix" the milk mixture and already liquid butter. Mix
+                  thoroughly with a silicone spatula so that the mass becomes
+                  uniform and silky.
+                </li>
+                <li class="how-made-list-item">
+                  Heat the mixture over low heat, letting it barely boil.
+                </li>
+                <li class="how-made-list-item">
+                  Pour the chocolate into special containers (can be replaced
+                  with ice molds). Allow to cool and harden.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Reviews Section -->
+      <section class="reviews-section section-paddings" id="reviews">
+        <div class="container">
+          <h2 class="section-title">
+            <span class="accent-color">Chocolate</span> is loved
+          </h2>
+          <ul class="reviews-list">
+            <li class="reviews-list-item">
+              <img
+                class="reviews-list-avatar"
+                src="./images/reviews/victoria-dobrzhanska.png"
+                alt="Victoria Dobrzhanska"
+                width="80"
+                height="80"
+              />
+              <h3 class="reviews-list-fullname">Victoria Dobrzhanska</h3>
+              <p class="reviews-list-text">
+                I love this chocolate bar. Perfect combination of light crispy
+                wafer, covered in a thin layer chocolate.
+              </p>
+            </li>
+            <li class="reviews-list-item">
+              <img
+                class="reviews-list-avatar"
+                src="./images/reviews/nazar-babenko.png"
+                alt="Nazar Babenko"
+                width="80"
+                height="80"
+              />
+              <h3 class="reviews-list-fullname">Nazar Babenko</h3>
+              <p class="reviews-list-text">
+                This chocolate confection is a delight! A delight! The wafer is
+                light and crisp, the hazelnut cream is smooth, and the chocolate
+                is good.
+              </p>
+            </li>
+            <li class="reviews-list-item">
+              <img
+                class="reviews-list-avatar"
+                src="./images/reviews/olena-kampusch.png"
+                alt="Olena Kampusch"
+                width="80"
+                height="80"
+              />
+              <h3 class="reviews-list-fullname">Olena Kampusch</h3>
+              <p class="reviews-list-text">
+                Chocolate is a family favourite treat. Love the delicious smooth
+                chocolate and the creaminess inside. The wafer is soft but
+                crunchy.
+              </p>
+            </li>
+          </ul>
+          <button class="leave-review-btn" type="button">Leave a review</button>
+        </div>
+      </section>
+    </main>
+    <!-- Page Footer -->
+    <footer class="page-footer">
+      <div class="container">
+        <div class="page-footer-top-block">
+          <h2 class="page-footer-title">
+            <span class="accent-color">Chocolate</span> a delicious cure for a
+            bad day
+          </h2>
+          <address class="contact-block">
+            <p class="contact-text">Contact us</p>
+            <ul class="contact-list">
+              <li class="contact-list-item">
+                <a class="contact-list-link link" href="tel:+380684439426"
+                  >+380 (68) 443-94-26</a
+                >
+              </li>
+              <li class="contact-list-item">
+                <a
+                  class="contact-list-link link"
+                  href="mailto:simplychoc@gmail.com"
+                  >simplychoc@gmail.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="page-footer-bottom-block">
+          <nav class="page-navigation">
+            <ul class="menu">
+              <li class="menu-item">
+                <a class="menu-link" href="index.html">Home</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link" href="#how-made">How it’s made?</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link" href="#reviews">Chocolate is loved</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
+
+<!-- 
+h1 - Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+  h2 - Our Benefits
+    h3 - Unsurpassed taste
+    h3 - Affordable price
+    h3 - Own production
+  h2 - IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION
+  h2 - hOW IT’S made?
+-->
